Changes for 2.3.3

New features:
A......... [ZBX-8459] made possible CORS AJAX requests for JSON API (Andrejs)

Bug fixes:
..F....... [ZBX-8425] fixed "Host status" widget displaying problematic host if one of its groups is set to hidden in dashboard filter (Ivo)

--------------------------------------------------------------------------------
Changes for 2.3.2

New features:
A.F....PS. [ZBXNEXT-2301] added a way to disable SNMP bulk operations per interface (Oleg,asaveljevs)
..F....... [ZBX-2603] added validation while working with regular expressions (Andrejs)
..F....... [ZBX-8278] prepared frontend for mbstring.internal_encoding ini option deprecation in php 5.6+ (Andrejs)
..F....... [ZBXNEXT-2222] added trigger status filter to the trigger overview page (Sasha)
..F....... [ZBX-8339] removed auto login/logout controls while editing guest user (Andrejs)
...G...... [ZBXNEXT-2203] added information on the reason log[] and logrt[] items became not supported (Andris,asaveljevs)
..F....... [ZBXNEXT-2254] added support for custom PostgreSQL schema to frontend and updated setup wizard (Krists)
..F....... [ZBX-8329] added styling for disabled buttons and inputs (Andrejs)
..F....... [ZBXNEXT-2344] added links on group names in "Web monitoring" widget (Ivo)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Japanese, Polish, Russian and Slovak translations; thanks to Zabbix translators (Richlv)
..F....... [ZBX-7399] improved multiselect by adding popup select window (Oleg)
..F....... [ZBX-8113] changed frontend configuration wizard to store info in session instead of cookies (Andrejs)

Bug fixes:
..F....... [ZBX-7941] changed page footer to show debug in fullscreen mode again (sasha)
........S. [ZBX-8011] fixed escalator giving false 'no media defined' errors (wiper)
.......PS. [ZBX-8450] removed carriage return stripping from text values when inserting data into the database (Juris)